437899-fixed a buncha stuff, create actually works now
