# backend-api/controllers/UsersController.js
@@ -5,18 +5,21 @@ const UUID = require('uuid')
 
 exports.create =
 async (req,res) => {
+    console.log("a")
+    console.log(req.body.DisplayName+" "+req.body.EmailAddress+" "+req.body.FullName+" "+req.body.PhoneNumber2FA+" "+req.body.PasswordHASH+" ")
     if (
         !req.body.FullName ||
         !req.body.EmailAddress ||
         !req.body.PasswordHASH ||
         !req.body.DisplayName 
     ){
-        
+        const bodycontent = req.body;
         var errors = "";
         switch(bodycontent) 
         {
             case !req.body.FullName:
                 errors+="FullName, "
+                
                 break;
             case !req.body.EmailAddress:
                 errors+="EmailAddress, "
@@ -36,12 +39,12 @@ async (req,res) => {
         UserID: UUID.v7(),
         FullName: req.body.FullName,
         EmailAddress: req.body.EmailAddress,
-        PasswordHASH: gimmePassword(req.body.PasswordHASH),
+        PasswordHASH: (await Utilities.gimmePassword(req.body.PasswordHASH)).toString(),
         DisplayName: req.body.DisplayName
     }
     
         if(req.body.PhoneNumber2FA != null){
-        newUser.PhoneNumber2FA = gimmePassword(req.body.PhoneNumber2FA);}
+        newUser.PhoneNumber2FA = Utilities.gimmePassword(req.body.PhoneNumber2FA).toString();}
     
     const resultingUser = await db.users.create(newUser);
     return res
